@@ -1,0 +1,38 @@
+// Copyright 2004-2009 Castle Project - http://www.castleproject.org/
+// 
+// Licensed under the Apache License, Version 2.0 (the "License");
+// you may not use this file except in compliance with the License.
+// You may obtain a copy of the License at
+// 
+//     http://www.apache.org/licenses/LICENSE-2.0
+// 
+// Unless required by applicable law or agreed to in writing, software
+// distributed under the License is distributed on an "AS IS" BASIS,
+// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+// See the License for the specific language governing permissions and
+// limitations under the License.
+
+namespace Castle.MicroKernel.Tests.ClassComponents
+{
+	public class ClassWithArguments
+	{
+		private readonly string arg1;
+		private readonly int arg2;
+
+		public string Arg1
+		{
+			get { return arg1; }
+		}
+
+		public int Arg2
+		{
+			get { return arg2; }
+		}
+
+		public ClassWithArguments(string arg1, int arg2)
+		{
+			this.arg1 = arg1;
+			this.arg2 = arg2;
+		}
+	}
+}
